bootstrap/tests/errors/missing_return.bmb
// Error test: Missing return expression
// Expected error: expected or type
fn add(a: i64, b: i64) -> i64;
fn main() -> i64 = 0;
